# rpg_tools_old2

./: .gitignore  Cargo.toml  README.adoc  README.md
macro_convert/: Cargo.toml
macro_core/: Cargo.toml
macro_ui/: Cargo.toml
macro_ui/src/: lib.rs  parse.rs  utils.rs  visit.rs
macro_ui/tests/: parse_test.rs
resources/: characters.json  characters.yaml  cultures.yaml  races.yaml
rpg_tools_core/: Cargo.toml
rpg_tools_core/examples/: convert_macro.rs  editor_macro.rs  parser_macro.rs  viewer_macro.rs
rpg_tools_core/src/: lib.rs  ui.rs
rpg_tools_core/src/model/: color.rs  length.rs  mod.rs  relations.rs  side.rs  size.rs  transparency.rs  width.rs
rpg_tools_core/src/model/appearance/: length.rs  mod.rs  side.rs  width.rs
rpg_tools_core/src/model/character/: gender.rs  manager.rs  mod.rs
rpg_tools_core/src/model/character/appearance/: body.rs  ear.rs  eye.rs  hair.rs  head.rs  mod.rs  mouth.rs  skin.rs
rpg_tools_core/src/model/character/appearance/beard/: full.rs  goatee.rs  mod.rs  moustache.rs
rpg_tools_core/src/model/character/appearance/ear/: mod.rs  shape.rs
rpg_tools_core/src/model/character/appearance/eye/: mod.rs  pupil.rs  shape.rs
rpg_tools_core/src/model/character/appearance/eye/brow/: mod.rs  shape.rs  style.rs
rpg_tools_core/src/model/character/appearance/hair/: bun.rs  hairline.rs  length.rs  long.rs  mod.rs  ponytail.rs  short.rs
rpg_tools_core/src/model/character/appearance/hair/ponytail/: mod.rs  position.rs  style.rs
rpg_tools_core/src/model/character/relation/: mod.rs  relationship.rs  romantic.rs
rpg_tools_core/src/model/culture/: manager.rs  mod.rs
rpg_tools_core/src/model/equipment/appearance/: belt.rs  bottoms.rs  eyewear.rs  footwear.rs  mod.rs  outerwear.rs  pants.rs  shirt.rs
rpg_tools_core/src/model/equipment/appearance/option/: button.rs  mod.rs  neckline.rs  sleeve.rs
rpg_tools_core/src/model/equipment/appearance/outerwear/: cloak.rs  coat.rs  mod.rs
rpg_tools_core/src/model/race/: gender.rs  manager.rs  mod.rs
rpg_tools_core/src/model/species/: gender.rs  manager.rs  mod.rs
rpg_tools_core/src/ui/: editor.rs  mod.rs  parser.rs  viewer.rs
rpg_tools_core/src/usecase/delete/: character.rs  culture.rs  mod.rs  race.rs
rpg_tools_core/src/usecase/edit/: character.rs  culture.rs  mod.rs  race.rs
rpg_tools_core/src/utils/: mod.rs  relation.rs  storage.rs
rpg_tools_editor/: Cargo.toml
rpg_tools_editor/src/: appearance.rs  io.rs  main.rs  parser.rs
rpg_tools_editor/src/route/: appearance.rs  character.rs  culture.rs  mod.rs  race.rs  relation.rs  species.rs
rpg_tools_editor/src/route/relation/: mod.rs  relationship.rs  romantic.rs
rpg_tools_editor/static/: scripts.js  style.css
rpg_tools_rendering/: Cargo.toml
rpg_tools_ui/: Cargo.toml
rpg_tools_ui/src/: io.rs  lib.rs
(+156 files in other folders)
