[package]
name = "macro_ui"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
macro_core = { path = "../macro_core" }
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"

[dev-dependencies]
macro_convert = { path = "../macro_convert" }
