[package]
name = "rpg_tools_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_convert = { path = "../macro_convert" }
macro_ui = { path = "../macro_ui" }
serde = { version = "1.0", features = ["derive"] }
titlecase = "2.2"