[package]
name = "rpg_tools_ui"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_core = { path = "../macro_core" }
macro_convert = { path = "../macro_convert" }
macro_ui = { path = "../macro_ui" }
rpg_tools_core = { path = "../rpg_tools_core" }
serde = { version = "1.0", features = ["derive"] }
titlecase = "2.2"